--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,21 @@ input{
 .invalid {
     border-color: orange
 }
+
+
+input + p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9em;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 10px;
+    color: orange;
+    opacity: 0;
+    height: 0;
+}
+
+input.invalid + p {
+    opacity: 1;
+    height: auto;
+    margin-bottom: 20px;
+}
